# time-sensei-back

./: .gitignore  Cargo.toml  dockerfile
src/: main.rs
src/domain/: mod.rs  revision.rs
src/domain/liste_fiche/: generate.rs  mod.rs
src/domain/liste_utilisateur/: mod.rs  repository.rs  service.rs
src/domain/utilisateur/: mod.rs  repository.rs  service.rs
src/infrastructure/mock/: liste_utilisateur_repo_mock.rs  mod.rs  utilisateur_repo_mock.rs
src/server/: mod.rs  router.rs  state.rs
src/server/handlers/: liste_utilisateur_handler.rs  mod.rs  utilisateur_handler.rs
src/server/routes/: liste_utilisateur.rs  mod.rs  stats.rs  utilisateur.rs
