[package]
name = "time-sensei"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "10.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4", "v5", "serde"] }
